--- a/_config.yml
+++ b/_config.yml
@@ -18,3 +18,12 @@ latex:
 # Add a bibtex file so that we can create citations
 bibtex_bibfiles:
   - references.bib
+
+# Information about where the book exists on the web
+repository:
+  url                       : https://github.com/fjohnson/minibook  # Online location of your book
+  branch                    : main  # Which branch of the repository should be used when creating links (optional)
+
+launch_buttons:
+  colab_url: "https://colab.research.google.com"
+  thebe                  : true
